--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Angel S. Mendez - Home</title>
     <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
     <link rel="stylesheet" href="static/style.css"/>
+    <link rel="preload" as="image" href="static/images/melodydb.png" />
   </head>
-  <body>
+  <body onload="wrapDiv();">
 <!-- Toolbar --> 
   <div class="toolbar">
     <p>CONTACT</p>
