--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class = "links" id = "links">
           <div><p><a href="https://www.github.com/angsam-git" target="_blank">GITHUB</a></p></div>
           <div><p><a href="https://www.linkedin.com/in/angsam" target="_blank">LINKEDIN</a></p></div>
-          <div><p><a href= "mailto: angelmendez074@gmail.com">CONTACT</a></p></div>
+          <div><p><a href= "https://www.ang-sam.com/contact">CONTACT</a></p></div>
         </div>
         <div class="dropdown" id = "drop_down">
           <div id = top_d></div>
           <div id = mid_d></div>
           <div id = bot_d></div>
-          <button class="btn" type="button" id="dropdownmenu" data-toggle="dropdown" onclick="dropdown()"></button>
+          <button class="btn-block" type="button" id="dropdownmenu" data-toggle="dropdown" onclick="dropdown()"></button>
         </div>
       </div>
       <div class = wrapper>
@@ -45,7 +45,7 @@
     
           <div>
             <div class = "email" id = "email">
-              <a href="mailto: angelmendez074@gmail.com" target="_blank"><div class = "email2"></div></a>
+              <a href="https://www.ang-sam.com/contact" target="_blank"><div class = "email2"></div></a>
             </div>
           </div>
         </div>
@@ -93,23 +93,23 @@
             <div class = "img_container imga"></div>
             <div class = "text_container">
               <div class = "proj_description">
-                <header>MELODYDB</header>
-                <p>Music Database of thousands of artists, albums, and songs.
+                <header class = "proj_text_header">MELODYDB</header>
+                <p class = "proj_text">Music Database of thousands of artists, albums, and songs.
                   Front end allows users to search through the database, comment on, and rate albums and songs.</p>
               </div>
               <div class = "proj_tech">
                 <div class = "proj_sw">
                   <header>TECHNOLOGIES</header>
                   <div class = "technologies">
-                    <div class = "python_tech"></div>
-                    <div class = "flask_tech"></div>
-                    <div class = "psql_tech"></div>
-                    <div class = "html_tech"></div>
-                    <div class = "css_tech"></div>
-                    <div class = "js_tech"></div>
+                    <div class = "tech python"></div>
+                    <div class = "tech flask"></div>
+                    <div class = "tech psql"></div>
+                    <div class = "tech html"></div>
+                    <div class = "tech css"></div>
+                    <div class = "tech js"></div>
                   </div>
                 </div>
-                <div class = "proj_apis">
+                <div class = "proj_api">
                   <header>APIs</header>
                   <div class = "apis">
                     <div class = "spotify_api"></div>
@@ -129,15 +129,15 @@
             <div class = "img_container imgb"></div>
             <div class = "text_container">
               <div class = "proj_description">
-                <header>SR PROTOCOL EMULATOR</header>
-                <p>Emulation of the selective repeat protocol.
+                <header class = "proj_text_header">SR PROTOCOL EMULATOR</header>
+                <p class = "proj_text">Emulation of the selective repeat protocol.
                   Socket programming and multithreading used to allow sending and receiving of packets/ACKs.</p>
               </div>
               <div class = "proj_tech">
                 <div class = "proj_sw">
                   <header>TECHNOLOGIES</header>
                   <div class = "technologies">
-                    <div class = "c_tech"></div>
+                    <div class = "tech c"></div>
                   </div>
                 </div>
               </div>
@@ -154,19 +154,19 @@
             <div class = "img_container imgc"></div>
             <div class = "text_container">
               <div class = "proj_description">
-                <header>INSPIREWEATHER</header>
-                <p>Android app which provides an inspirational quote with a full weather report.
+                <header class = "proj_text_header">INSPIREWEATHER</header>
+                <p class = "proj_text">Android app which provides an inspirational quote with a full weather report.
                   UI allows users to adjust unit settings and navigate through forecasts.</p>
               </div>
               <div class = "proj_tech">
                 <div class = "proj_sw">
                   <header>TECHNOLOGIES</header>
                   <div class = "technologies">
-                    <div class = "java_tech"></div>
-                    <div class = "android_tech"></div>
+                    <div class = "tech java"></div>
+                    <div class = "tech android"></div>
                   </div>
                 </div>
-                <div class = "proj_apis">
+                <div class = "proj_api">
                   <header>APIs</header>
                   <div class = "apis">
                     <div class = "darksky_api"></div>
@@ -187,22 +187,22 @@
             <div class = "img_container imgd"></div>
             <div class = "text_container">
               <div class = "proj_description">
-                <header>NOOKS</header>
-                <p>Apartment hunting website which organizes the apartment hunting process.
+                <header class = "proj_text_header">NOOKS</header>
+                <p class = "proj_text">Apartment hunting website which organizes the apartment hunting process.
                   Front end allows users to track apartment listings and organize them on a map and table. Uses MVC Framework.</p>
               </div>
               <div class = "proj_tech">
                 <div class = "proj_sw">
                   <header>TECHNOLOGIES</header>
                   <div class = "technologies">
-                    <div class = "rails_tech"></div>
-                    <div class = "sqlite_tech"></div>
-                    <div class = "html_tech"></div>
-                    <div class = "css_tech"></div>
-                    <div class = "js_tech"></div>
+                    <div class = "tech rails"></div>
+                    <div class = "tech sqlite"></div>
+                    <div class = "tech html"></div>
+                    <div class = "tech css"></div>
+                    <div class = "tech js"></div>
                   </div>
                 </div>
-                <div class = "proj_apis">
+                <div class = "proj_api">
                   <header>APIs</header>
                   <div class = "apis">
                     <div class = "maps_api"></div>
@@ -216,7 +216,7 @@
       </div>
 
 
-      <div class = "footer">
+      <div class = "footer fa">
         <p>Copyright 2022 © Angel Samuel Mendez</p>
         <a href="https://github.com/angsam-git/portfolio_site" target="_blank">WEBSITE GITHUB REPO</a>
       </div>
