--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,11 @@
     <link rel="icon" type="image/png" href="static/images/favicon_16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="static/images/favicon_32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="static/images/favicon_96.png" sizes="96x96">
+    <script>
+      function onSubmit(token) {
+        document.getElementById("contact_form").submit();
+      }
+    </script>
   </head>
   <body onload="loadUp()">
 
@@ -45,12 +50,12 @@
 
       <div class = "contact">
         <p>CONTACT</p>
-        <form action="https://formsubmit.co/angelmendez074@gmail.com" method="POST">
+        <form id = "contact_form" action="contact.php" method="POST">
           <input type="hidden" name="_subject" value="ANGSAM SOFTWARE">
+          <input type="name" name="name" placeholder="Full Name" required autocomplete="off">
           <input type="email" name="email" placeholder="Email Address" required>
-          <input type="name" name="name" placeholder="Name" required>
-          <textarea type="text" name="text" placeholder="Message" required></textarea>
-          <button type="submit">Send</button>
+          <textarea type="text" name="message" placeholder="Message" required autocomplete="off"></textarea>
+          <button type="submit" class="g-recaptcha" data-sitekey="6LdgRhoeAAAAAJ4Xa_t0zstxY-e9zJU1aYfTAxHR" data-callback = "onSubmit" data-action="submit">Send</button>
         </form>
       </div>
       
@@ -71,6 +76,7 @@
     </div>
     <script src="static/wrapper.js"></script>
     <script src="static/animations.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
